# gl_snake

./: .gitignore  CMakeLists.txt
include/: shader.h
src/: main.cpp
